force-app/main/default/objects/License__c/License__c.object-meta.xml
<CustomObject>
    <description>License Information</description>
    <label>License</label>
    <nameField>
        <label>License Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>