force-app/main/default/objects/License__c/fields/Full_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Product_Name__c</fullName>
    <formula>Software_Name__c &amp; &apos; &apos;  &amp; Software_Module_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Product Name</label>
    <type>Text</type>
</CustomField>