force-app/main/default/objects/License__c/fields/License_Name__c.field-meta.xml
<CustomField>
    <fullName>License_Name__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>License Name</label>
    <type>AutoNumber</type>
</CustomField>