force-app/main/default/objects/License__c/fields/License_Status__c.field-meta.xml
<CustomField>
    <fullName>License_Status__c</fullName>
    <formula>IF( Expiration_Date__c &gt;  TODAY() ,  IMAGE(&quot;/servlet/servlet.FileDownload?file=0153u000002FIIC&quot;,&quot;Not Expired&quot;, 24,24) ,  IMAGE(&quot;/servlet/servlet.FileDownload?file=0153u000002FIIH&quot;,&quot;Expired&quot;,24,24) )</formula>
    <label>License Status</label>
    <type>Text</type>
</CustomField>