force-app/main/default/objects/License__c/fields/Number_of_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Licenses__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>