force-app/main/default/objects/License__c/fields/Software_Module_Name__c.field-meta.xml
<CustomField>
    <fullName>Software_Module_Name__c</fullName>
    <label>Software Module Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>